@startuml

title __GEOTEMPORALOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.geoperators.geoTemporalOperators {
      abstract class gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geoTemporalOperators.GeoTemporalOperator {
          + getOperatorExpression()
          # GeoTemporalOperator()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.geoperators.geoTemporalOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geoTemporalOperators.HBaseGeoTemporalOperatorFactory {
          + newOperatorGeoTemporalNearestNeighbors()
          + newOperatorInGeoTemporalCircleKm()
          + newOperatorInGeoTemporalCircleMeters()
          + newOperatorInGeoTemporalCircleMiles()
          + newOperatorInGeoTemporalPolygon()
          + newOperatorInGeoTemporalRectangle()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.geoperators.geoTemporalOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geoTemporalOperators.OperatorInGeoTemporalCircle {
          {static} + newOperatorInGeoTemporalCircle()
          # OperatorInGeoTemporalCircle()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.geoperators.geoTemporalOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geoTemporalOperators.OperatorInGeoTemporalPolygon {
          {static} + newOperatorInGeoTemporalPolygon()
          # OperatorInGeoTemporalPolygon()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.geoperators.geoTemporalOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geoTemporalOperators.OperatorInGeoTemporalRectangle {
          {static} + newOperatorInGeoTemporalRectangle()
          # OperatorInGeoTemporalRectangle()
      }
    }
  }
  

  gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geoTemporalOperators.GeoTemporalOperator -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.geoperators.geoTemporalOperators.GeoTemporalOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geoTemporalOperators.HBaseGeoTemporalOperatorFactory -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.geoperators.geoTemporalOperators.BaseGeoTemporalOperatorFactory
  gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geoTemporalOperators.OperatorInGeoTemporalCircle -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geoTemporalOperators.GeoTemporalOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geoTemporalOperators.OperatorInGeoTemporalPolygon -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geoTemporalOperators.GeoTemporalOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geoTemporalOperators.OperatorInGeoTemporalRectangle -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geoTemporalOperators.GeoTemporalOperator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
